--- a/src/locales/tw/translation.json
+++ b/src/locales/tw/translation.json
@@ -2,9 +2,9 @@
   "1_intro_title": "簡介",
   "1_intro_name": "賈斯丁黃",
   "1_intro_subtitle": "不安分的靈魂",
-  "1_intro_content_1": "一個非典型技術宅，鑽研技術也享受打造產品和琢磨細節的過程。資訊科技大幅改變人類的生活型態，我們每天都需要用到各種軟體服務，我認為有技術能力親手打造軟體產品是一件很酷的事情。",
-  "1_intro_content_2": "前端工程師站在人文與科技的交叉口，結合理性與感性，為產品打造使用者介面並創造好的使用者體驗，是我喜歡的工作模式。目前專注於前端領域，擅長運用 React 生態系工具打造網頁應用程式。",
-  "1_intro_content_3": "汽車愛好者，對德國工藝特別著迷，尤其是賓士全方位的產品配置和保時捷獨樹一格的德式激情。喜歡分析市場和規格，曾在台灣唯一整車研發企業擔任產品經理。",
+  "1_intro_content_1": "一個大學念電機，因為愛車而進入車廠擔任產品經理，因為喜歡親手打造產品的過程而踏入軟體領域的技術宅。",
+  "1_intro_content_2": "現職為軟體工程師，專注於前端領域，擅長運用 React 生態系工具打造網頁應用程式。\n期許自己能站在科技與人文的交叉口，結合理性與感性，為產品打造使用者介面並致力於創造良好的使用者體驗。",
+  "1_intro_content_3": "對於技術抱持開放的態度, 也涉獵後端及 DevOps 領域，目標是成為一位技術能力及產品思維兼備的軟體工程師。",
   "1_intro_content_4": "",
   "1_timeline_title": "職涯",
   "1_timeline_title_1": "軟體工程師",
