--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,9 +2,9 @@
   "1_intro_title": "Intro",
   "1_intro_name": "JustinHuang",
   "1_intro_subtitle": "Restless Soul",
-  "1_intro_content_1": "I am a frontend developer with technical skills and product mindset, specialized in React.js ecosystem for web application development.",
-  "1_intro_content_2": "Now I am working for the largest E-commerce platform in Hong Kong and working on developing enterprise applications.",
-  "1_intro_content_3": "Now I am working for the largest E-commerce platform in Hong Kong and working on developing enterprise applications.",
+  "1_intro_content_1": "A geek that studied electrical engineering in college, used to be a product manager in automotive company because I’m a petrol-head, went from a product manager to a software engineer because I like the process of building a product from scratch.",
+  "1_intro_content_2": "Now I am a software engineer, focused on frontend development and specialized in React.js ecosystem. \nTried to be at the intersection of technology and the liberal arts and dedicated to building the best user interface and user experience. ",
+  "1_intro_content_3": "Open-minded to new technology and dabbling in the field of backend and DevOps.\nAimed to become a software engineer with technical skills and product mindset.",
   "1_intro_content_4": "",
   "1_timeline_title": "Career",
   "1_timeline_title_1": "Software Engineer",
