--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,11 +8,11 @@
   "1_intro_content_4": "",
   "1_timeline_title": "Career",
   "1_timeline_title_1": "Software Engineer",
-  "1_timeline_company_1": "Shoalter Technology (HKTV Group)",
+  "1_timeline_company_1": "Shoalter Technology (HKTV Group)英屬維京群島商易貿股份有限公司 (香港科技探索集團)",
   "1_timeline_content_1": "Shoalter Technology is a subsidiary of HKTVmall, the largest E-commerce platform in Hong Kong. The main business of Shoalter is to provide enterprise software solutions for different business models (B2B, B2C, B2B2C).",
   "1_timeline_title_2": "Software Engineer",
   "1_timeline_company_2": "Askey (ASUS Group)",
-  "1_timeline_content_2": "Built a CI pipeline to run api-test-program and save reports in AWS S3 by Azure Pipeline and Ansible, then push notifications to Google Chat automatically.",
+  "1_timeline_content_2": "Built a CI pipeline to execute api-testing and save reports in AWS S3 by Azure Pipeline and Ansible, then push notifications to Google Chat automatically.",
   "1_timeline_title_3": "Product Manager",
   "1_timeline_company_3": "HAITEC (Yulon Group)",
   "1_timeline_content_3": "I am mainly in charge of coordinating with cross-company project teams which includes HAITEC R&D team, Yulon motor manufacturing team and Luxgen Motor brand marketing team on product development and management.",
