chore: udpate i18n data

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,7 +8,7 @@
   "1_intro_content_4": "",
   "1_timeline_title": "Career",
   "1_timeline_title_1": "Software Engineer",
-  "1_timeline_company_1": "Shoalter Technology (HKTV Group)英屬維京群島商易貿股份有限公司 (香港科技探索集團)",
+  "1_timeline_company_1": "Shoalter Technology (HKTV Group)",
   "1_timeline_content_1": "Shoalter Technology is a subsidiary of HKTVmall, the largest E-commerce platform in Hong Kong. The main business of Shoalter is to provide enterprise software solutions for different business models (B2B, B2C, B2B2C).",
   "1_timeline_title_2": "Software Engineer",
   "1_timeline_company_2": "Askey (ASUS Group)",
