--- a/src/locales/tw/translation.json
+++ b/src/locales/tw/translation.json
@@ -16,5 +16,6 @@
   "1_timeline_company_3": "華創車電 (裕隆集團)",
   "1_timeline_content_3": "代表華創研發團隊與裕隆集團納智捷價值鏈相關公司合作進行產品企劃及規格配備提案。",
   "1_life_title": "生活",
-  "1_further_info": "更多資訊"
+  "1_further_info": "更多資訊",
+  "1_timeline_company_1": "英屬維京群島商易貿股份有限公司 (香港科技探索集團)"
 }
