chore: update website title

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
   "1_intro_title": "Intro",
   "1_intro_name": "JustinHuang",
-  "1_intro_subtitle": "Restless Soul",
+  "1_intro_subtitle": "A Curious Soul",
   "1_intro_content_1": "A geek that studied electrical engineering in college, used to be a product manager in automotive company because I’m a petrol-head, went from a product manager to a software engineer because I like the process of building a product from scratch.",
   "1_intro_content_2": "Now I am a software engineer, focused on frontend development and specialized in React.js ecosystem. \nTried to be at the intersection of technology and the liberal arts and dedicated to building the best user interface and user experience. ",
   "1_intro_content_3": "Open-minded to new technology and dabbling in the field of backend and DevOps.\nAimed to become a software engineer with technical skills and product mindset.",
