--- a/src/locales/tw/translation.json
+++ b/src/locales/tw/translation.json
@@ -1,7 +1,7 @@
 {
   "1_intro_title": "簡介",
   "1_intro_name": "賈斯丁黃",
-  "1_intro_subtitle": "不安分的靈魂",
+  "1_intro_subtitle": "好奇的靈魂",
   "1_intro_content_1": "一個大學念電機，因為愛車而進入車廠擔任產品經理，因為喜歡親手打造產品的過程而踏入軟體領域的技術宅。",
   "1_intro_content_2": "現職為軟體工程師，專注於前端領域，擅長運用 React 生態系工具打造網頁應用程式。\n期許自己能站在科技與人文的交叉口，結合理性與感性，為產品打造使用者介面並致力於創造良好的使用者體驗。",
   "1_intro_content_3": "對於技術抱持開放的態度, 也涉獵後端及 DevOps 領域，目標是成為一位技術能力及產品思維兼備的軟體工程師。",
