chore: update i18n data

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,5 +17,5 @@
   "1_timeline_company_3": "HAITEC (Yulon Group)",
   "1_timeline_content_3": "I am mainly in charge of coordinating with cross-company project teams which includes HAITEC R&D team, Yulon motor manufacturing team and Luxgen Motor brand marketing team on product development and management.",
   "1_life_title": "Life",
-  "1_further_info": "Further Information"
+  "1_further_info": "More"
 }
