--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -12,7 +12,7 @@
   "1_timeline_content_1": "Shoalter Technology is a subsidiary of HKTVmall, the largest E-commerce platform in Hong Kong. The main business of Shoalter is to provide enterprise software solutions for different business models (B2B, B2C, B2B2C).",
   "1_timeline_title_2": "Software Engineer",
   "1_timeline_company_2": "Askey (ASUS Group)",
-  "1_timeline_content_2": "Built a CI pipeline to execute api-testing and save reports in AWS S3 by Azure Pipeline and Ansible, then push notifications to Google Chat automatically.",
+  "1_timeline_content_2": "Implemented a CI pipeline to run api-test-program by Azure Pipeline and Ansible, then store reports in AWS S3, and push notifications to Google Chat channel automatically",
   "1_timeline_title_3": "Product Manager",
   "1_timeline_company_3": "HAITEC (Yulon Group)",
   "1_timeline_content_3": "I am mainly in charge of coordinating with cross-company project teams which includes HAITEC R&D team, Yulon motor manufacturing team and Luxgen Motor brand marketing team on product development and management.",
